# manual-bb-test-harness

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: validate.yml
docs/: evaluation-rubric.md  forward-test-report-template.md  improvement-notes.md  notion-forward-test-template.md  notion-report-guide.md  release-policy.md
docs/research/: deep-research-report.md
docs/specs/: spec-01-ci-cd-enhancement.md  spec-02-cli-integration.md  spec-03-schema-extension.md  spec-04-test-result-import.md  validation-report.json
examples/: README.md  regression-graph.dot  regression-graph.html
examples/artifacts/: README.md  admin-role-change.feature_spec.json  admin-role-change.test_model.json  order-cancel.feature_spec.json  order-cancel.gate_decision.json  order-cancel.manual_case_set.json  order-cancel.risk_register.json  order-cancel.test_model.json  risk-heatmap.html
examples/artifacts/execution_evidence/: CHARTER-001.json  TC-001.json  TC-002.json
goldens/: README.md  admin-role-change.expected.md  admin-role-change.input.md  order-cancel.expected.json  order-cancel.expected.md  order-cancel.input.json  order-cancel.input.md
schemas/: README.md  effort_plan.schema.json  execution_evidence.schema.json  feature_spec.schema.json  gate_decision.schema.json  manual_case_set.schema.json  observation_set.schema.json  release_brief.schema.json  risk_register.schema.json  shared_defs.schema.json  spec-source.schema.json  test_model.schema.json  testrail-export.schema.json  xray-export.schema.json
scripts/: check-utf8.py  evaluate-gate.py  export-notion.py  export-testrail.py  export-xray.py  import-testrail.py  import-xray.py  quick-validate-skill.py  regression-graph.py  risk-heatmap.py  spec-ingest.py  state-diagram.py  validate-artifact.py  validate-skill.ps1  validate-spec.py
skills/manual-bb-test-harness/: SKILL.md
skills/manual-bb-test-harness/agents/: generic.yaml  openai.yaml
skills/manual-bb-test-harness/references/: artifact-contract.md  case-design-policy.md  domain-pack-ec.md  domain-pack-finance.md  domain-pack-saas-rbac.md  failure-modes.md  forward-test.md  output-templates.md  risk-and-gate-policy.md
src/bb_harness/: __init__.py  __main__.py  cli.py
src/bb_harness/commands/: __init__.py  export.py  gate.py  heatmap.py  ingest.py  regression_graph.py  state_diagram.py  validate.py
tests/: __init__.py  conftest.py  test_export.py  test_quick_validate_skill.py  test_regression_graph.py  test_spec_ingest.py  test_state_diagram.py  test_validate_skill_ps1.py
