[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bb-harness"
version = "0.2.0"
description = "Manual black-box test harness CLI tool"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "RNA4219"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Quality Assurance",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
api = ["requests>=2.28"]
notion = ["notion-client>=2.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.1"]
all = ["bb-harness[api,notion,dev]"]

[project.scripts]
bb-harness = "bb_harness.cli:main"

[project.urls]
Homepage = "https://github.com/RNA4219/manual-bb-test-harness"
Repository = "https://github.com/RNA4219/manual-bb-test-harness"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
pythonpath = ["scripts", "src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["BLE001"]

[tool.coverage.run]
source = ["scripts", "src/bb_harness"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise SystemExit",
]